Exchange 2016 CU11 support

--- a/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
+++ b/Src/Configuration.DkimSigner/Configuration.DkimSigner.csproj
@@ -236,6 +236,7 @@
     <Compile Include="UninstallWindow.Designer.cs">
       <DependentUpon>UninstallWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="UserPreferences.cs" />
     <Compile Include="UserPreferences.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
