Added Exchange 2019 Preview DLLs + re-enabled Travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU11"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 RTM"
-#- xbuild DkimSigner.sln /p:Configuration="Ex2019 Preview"
+- xbuild DkimSigner.sln /p:Configuration="Ex2019 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 RTM"
 - xbuild DkimSigner.sln /p:Configuration="Release"
 
