--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,10 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU16"
 - xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU17"
 - xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU18"
+- xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU19"
+- xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU20"
+- xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU21"
+- xbuild DkimSigner.sln /p:Configuration="Ex2013 SP1 CU22"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU1"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU2"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU3"
@@ -47,10 +51,12 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU9"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU10"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU11"
+- xbuild DkimSigner.sln /p:Configuration="Ex2016 CU12"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 RTM"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 RTM"
+- xbuild DkimSigner.sln /p:Configuration="Ex2019 CU1"
 - xbuild DkimSigner.sln /p:Configuration="Release"
 
 #addons:
