--- a/.travis.yml
+++ b/.travis.yml
@@ -57,6 +57,8 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU14"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU15"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 CU16"
+- xbuild DkimSigner.sln /p:Configuration="Ex2016 CU17"
+- xbuild DkimSigner.sln /p:Configuration="Ex2016 CU18"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 Preview"
 - xbuild DkimSigner.sln /p:Configuration="Ex2016 RTM"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 Preview"
@@ -66,6 +68,8 @@ script:
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 CU3"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 CU4"
 - xbuild DkimSigner.sln /p:Configuration="Ex2019 CU5"
+- xbuild DkimSigner.sln /p:Configuration="Ex2019 CU6"
+- xbuild DkimSigner.sln /p:Configuration="Ex2019 CU7"
 - xbuild DkimSigner.sln /p:Configuration="Release"
 
 #addons:
